Misc fixes (#27)
* fixed reverse gb annotations being misaligned

* made selection cursor in dark mode more visible

* fixed primers docx having dark theme colors

* added default fallback for ambiguous codons

* fixed disabled menu items still being clickable

* text in disabled menu items is no longer selectable

* ambigous codons now show up as "?" in translations

* fixed tab name not being updated upon undo/redo

* fixed set plasmid origin modal not showing up

* fixed setPlasmidOrigin

* fixed 1 bp long rev continued features looking weird

* fixed stray 0 bp long annotations

* added function to estimate protein sequence MW

* added functionality to save color in gb files

* improved parsers and exporters

* removed unnecessary gb file

* updated demo file with persistent iva colors

* skip nightly pre-release if no new commits

* specify repo

--- a/tauri/iva-prime/src/static/css/styles.css
+++ b/tauri/iva-prime/src/static/css/styles.css
@@ -61,7 +61,7 @@
   --base-search-highlight: #ff4081;
   --base-sub: #de4d96;
   --base-sub-border: #ffc6e8;
-  --selection-cursor: #adaa0d;
+  --selection-cursor: #fffc4e;
 
   /* ------ Misc ------ */
   --shadow-color: #00000066;
@@ -2352,6 +2352,9 @@ html[data-theme="dark"] .boolean-switch-slider:before {
 }
 .context-menu-item[disabled] {
   opacity: 15%;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 .context-menu-item:not([disabled]):hover {
   background-color: var(--bg-hover);
